# rational

./: CMakeLists.txt
rational/: CMakeLists.txt  rational.cpp  rational.hpp
rational_test/: CMakeLists.txt  rational_test.cpp
